# Finnie

./: .gitignore  DEVELOPMENT.md  Dockerfile  FLOWCHART.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run_app.py  serve_docs.sh  setup-github.sh  setup.sh
.github/workflows/: ci.yml  docs.yml
agents/: __init__.py  compliance.py  market.py  orchestrator.py  portfolio.py  tutor.py
app/: __init__.py  main.py  utils.py
app/pages/: chat.py  learn.py  markets.py  portfolio.py
app/views/: __init__.py  chat.py  markets.py  portfolio.py
docs/: index.md
docs/Financial Engine/: __init__.md  class-diagram.md  index.md  project-flowchart.md  sequence-diagrams.md  test_setup.md
docs/deployment/: aws-deployment-guide.md  github-setup-guide.md
graph/: __init__.py  workflow.py
rag/: __init__.py  ingest.py  retrieve.py
scripts/: demo_portfolio_analysis.py  deploy-aws.sh  generate_portfolio_data.py
tools/: __init__.py  mcp_market.py  portfolio_metrics.py
