[project]
name = "finnie"
version = "0.1.0"
description = "Finnie - Financial AI Engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sankar Subbayya", email = "sankar@example.com"}
]
dependencies = [
    # Core dependencies
    "streamlit>=1.28.0",
    "streamlit-option-menu>=0.3.6",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Data science and ML
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Financial data
    "yfinance>=0.2.18",
    "alpha-vantage>=2.3.1",
    # RAG and embeddings
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    # LangGraph and agents
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    # Web scraping and parsing
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "PyPDF2>=3.0.1",
    # Database and storage
    "psycopg2-binary>=2.9.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    # SupportVectors framework
    "svlearn-bootcamp>=0.1.7",
    "mkdocs-mermaid-plugin>=0.1.1",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

docs = [
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.23.0",
    "mkdocs-mermaid-plugin>=0.1.1",
]

[project.scripts]
finnie = "run_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov=agents --cov=graph --cov=rag --cov=tools --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "app/",
    "agents/",
    "graph/",
    "rag/",
    "tools/",
    "tests/",
    "docs/",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "agents", "graph", "rag", "tools"]
